// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders interaction correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {
                "fontSize": 32,
              },
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Comment
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Interaction
    </Text>
  </View>
</View>
`;

exports[`renders survey correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Survey
    </Text>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 1
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 1
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 2
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 2
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 3
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 3
      </Text>
    </View>
  </View>
</View>
`;

exports[`stage is rendered correctly with old stage for a contact 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Uninterested to Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Person changed from Uninterested to Curious
    </Text>
  </View>
</View>
`;

exports[`stage is rendered correctly with old stage for self 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Uninterested to Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You changed from Uninterested to Curious
    </Text>
  </View>
</View>
`;

exports[`stage is rendered correctly without old stage for a contact 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You added Test Person to MissionHub as Curious
    </Text>
  </View>
</View>
`;

exports[`stage is rendered correctly without old stage for self 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You added yourself to MissionHub as Curious
    </Text>
  </View>
</View>
`;

exports[`step is rendered correctly with comment 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step

test comment on completed step
    </Text>
  </View>
</View>
`;

exports[`step is rendered correctly with pathway stage 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Guiding Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step
    </Text>
  </View>
</View>
`;

exports[`step is rendered correctly without comment 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "paddingRight": 24,
        "paddingVertical": 19,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 32,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#007398",
                "fontSize": 40,
                "textAlign": "center",
              },
              Object {},
            ],
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "#ECEEF2",
          "borderLeftWidth": 1,
          "paddingBottom": 5,
          "paddingLeft": 20,
        },
        Object {
          "flex": 3.5,
          "flexDirection": "column",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
      testID="Text"
    >
      December 6, 2017
    </Text>
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step
    </Text>
  </View>
</View>
`;
